RESOLVED FIXED20729
[Qt] Canvas gradients don't work as expected
https://bugs.webkit.org/show_bug.cgi?id=20729
Summary [Qt] Canvas gradients don't work as expected
Dirk Schulze
Reported 2008-09-08 10:52:03 PDT
Radial gradients are broken on Qt. Center and focal point are mixed up and the radius of the start circle is not supported by Qt.
Attachments
Qt radial gradients (1.70 KB, patch)
2008-09-08 10:53 PDT, Dirk Schulze
no flags
Qt gradients (1.94 KB, patch)
2008-09-10 00:06 PDT, Dirk Schulze
hausmann: review-
Qt gradients (1.93 KB, patch)
2008-09-10 13:09 PDT, Dirk Schulze
hausmann: review+
Dirk Schulze
Comment 1 2008-09-08 10:53:01 PDT
Created attachment 23266 [details] Qt radial gradients fixed radial gradients on Qt
Dirk Schulze
Comment 2 2008-09-10 00:06:22 PDT
Created attachment 23314 [details] Qt gradients reused old canvas-code to get multiple color-stops with the same offset to work: http://developer.mozilla.org/samples/canvas-tutorial/4_9_canvas_lineargradient.html and added the code above to support the inner radius as well as the outer radius on Canvas: http://developer.mozilla.org/samples/canvas-tutorial/4_10_canvas_radialgradient.html -> gradients fixed
Simon Hausmann
Comment 3 2008-09-10 12:52:12 PDT
Comment on attachment 23314 [details] Qt gradients Looks good, but there's a small coding style nitpick: If (qFuzzyCompare(...)) { one line of code } else another line of code There's no need for braces in one-liners
Dirk Schulze
Comment 4 2008-09-10 13:09:31 PDT
Created attachment 23326 [details] Qt gradients deleted braces :-)
Simon Hausmann
Comment 5 2008-09-11 00:30:44 PDT
Comment on attachment 23326 [details] Qt gradients Thanks!
Simon Hausmann
Comment 6 2008-09-11 00:37:54 PDT
Landed in r36330
Note You need to log in before you can comment on or make changes to this bug.