2008-09-11  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=20729

        Fixed canvas gradients for Qt

Canonical link: https://commits.webkit.org/28622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36330 268f45cc-cd09-0410-ab3c-d52691b4dbfc