WebCore/platform/graphics/qt/GradientQt.cpp
@@ -46,15 +46,23 @@ QGradient* Gradient::platformGradient()
         return m_gradient;
 
     if (m_radial)
-        m_gradient = new QRadialGradient(m_p0.x(), m_p0.y(), m_r0, m_p1.x(), m_p1.y());
+        m_gradient = new QRadialGradient(m_p1.x(), m_p1.y(), m_r1, m_p0.x(), m_p0.y());
     else
         m_gradient = new QLinearGradient(m_p0.x(), m_p0.y(), m_p1.x(), m_p1.y());
 
     QColor stopColor;
     Vector<ColorStop>::iterator stopIterator = m_stops.begin();;
+    qreal lastStop;
+    const qreal lastStopDiff = 0.0000001;
     while (stopIterator != m_stops.end()) {
         stopColor.setRgbF(stopIterator->red, stopIterator->green, stopIterator->blue, stopIterator->alpha);
-        m_gradient->setColorAt(stopIterator->stop, stopColor);
+        if (qFuzzyCompare(lastStop, qreal(stopIterator->stop)))
+            lastStop = stopIterator->stop + lastStopDiff;
+        else
+            lastStop = stopIterator->stop;
+        if (m_radial && m_r0)
+            lastStop = m_r0 / m_r1 + lastStop * (1.0f - m_r0 / m_r1);
+        m_gradient->setColorAt(lastStop, stopColor);
         ++stopIterator;
     }
 
